# photon-hackathon

./: .env  .env.example  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/core/: auth.py
backend/app/core/embedding/: chunker.py  embedder.py
backend/app/core/graph/: builder.py
backend/app/core/query_engine/: context_assembler.py  intent_classifier.py  llm_orchestrator.py  retrieval.py
backend/app/routers/: __init__.py  annotations.py  auth.py  files.py  graph.py  jobs.py  onboarding.py  query.py  repos.py
backend/app/services/: job_queue.py  learning_path.py  manifest_builder.py  repo_fetcher.py  report_generator.py
backend/app/tasks/: celery_app.py  ingestion.py
frontend/: Dockerfile  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/repos/[id]/: layout.tsx  page.tsx
frontend/app/repos/[id]/docs/: page.tsx
frontend/app/repos/[id]/file/: page.tsx
frontend/app/repos/[id]/graph/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: AnnotationPanel.tsx  BreadcrumbTrail.tsx  CodeViewer.tsx  DependencyGraph.tsx  FileExplorer.tsx  GraphContextPanel.tsx  IngestionProgress.tsx  LearningPathTimeline.tsx  Navbar.tsx  QueryPanel.tsx  QuickActionModal.tsx  RepoConnectForm.tsx  Sidebar.tsx
frontend/lib/: api.ts  auth.ts  sse.ts  utils.ts
(+4 files in other folders)
